# earthquake-alert

./: .dockerignore  .env.example  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  compose.yaml  docker-compose.yml  main.go  wss_test_server.py
.cargo/: config.toml
.github/workflows/: build.yml  container.yml  openapi.yml
backend/: .env.example
backend/src/: config.rs  main.rs
backend/src/routes/: subscribe.rs
backend/src/services/: bark_notifier.rs  earthquake_monitor.rs
backend/src/utils/: geohash.rs
backend/static/: index.html
benches/: event_pipeline.rs
docs/: openapi.yaml
fanstudio_monitor/: .env.example  monitor.py
public/: index.html
src/: application.rs  benchmark_support.rs  config.rs  lib.rs  lifecycle.rs  main.rs  migration_support.rs  source_registry.rs
src/db/: mod.rs  subscription_store.rs
src/delivery/: bark.rs  context.rs  message.rs  mod.rs
src/events/: coordinator.rs  mod.rs  reducer.rs
src/matching/: engine.rs  mod.rs  plan.rs  reference.rs
src/models/: disaster.rs  incident.rs  mod.rs  subscription.rs
src/providers/: fanstudio.rs  fanstudio_protocol.rs  huania.rs  mod.rs  reconnect.rs  value.rs  wolfx.rs  wolfx_protocol.rs
src/routes/: detail_page.rs  mod.rs  reverse_geocoder.rs  subscribe.rs  web.rs
src/runtime/: mod.rs  pipeline.rs  ready_queue.rs  status.rs
src/services/: bark_notifier.rs  disaster_dispatcher.rs  event_aggregator.rs  mod.rs  reverse_geocoder.rs
src/storage/: codec.rs  facade.rs  fjall.rs  mod.rs
src/subscriptions/: compiled.rs  confirmation.rs  manager.rs  mod.rs
src/utils/: country.rs  distance.rs  intensity.rs  mod.rs  region.rs
web/: index.html
