[package]
name = "disaster-alert"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
anyhow = { version = "1.0.103", default-features = false, features = ["std"] }
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "query", "tokio"] }
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"] }
reqwest = { version = "0.13.4", default-features = false, features = ["http2", "json", "rustls"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
sled = { version = "0.34.7", default-features = false, features = ["no_metrics"] }
tokio = { version = "1.52.3", default-features = false, features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tower-http = { version = "0.7.0", default-features = false, features = ["cors"] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["env-filter", "fmt", "std"] }
url = "2.5.7"
urlencoding = "2.1.3"

[lints.rust]
bare_trait_objects = "deny"
future_incompatible = { level = "deny", priority = -1 }
let_underscore_drop = "deny"
non_ascii_idents = "deny"
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"
unfulfilled_lint_expectations = "deny"
unused_must_use = "deny"
warnings = "deny"

[lints.clippy]
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
dbg_macro = "deny"
expect_used = "deny"
exit = "deny"
let_underscore_future = "deny"
let_underscore_lock = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
let_unit_value = "deny"
map_err_ignore = "deny"
mem_forget = "deny"
panic = "deny"
panic_in_result_fn = "deny"
print_stderr = "deny"
print_stdout = "deny"
redundant_clone = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unreachable = "deny"
unused_result_ok = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
